# chords

./: AudioManager.vala  CMakeLists.txt  Chords.vala  FileSource.vala  LICENSE  WaveformWidget.vala  chords.ui
src/: AudioManager.vala  BeatMarker.vala  Chords.vala  FFT.c  FFT.h  FFT2.c  FileSource.vala  FreqVisualizer.vala  HelperFunctions.vala  Marker.vala  MeasureMarker.vala  Renderable.vala  SectionMarker.vala  UnitsConverter.vala  Waveform.vala  WaveformWidget.vala
ui/: chords.ui
vapi/: gstreamer-base-1.0.vapi
